--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,12 @@ wee_alloc = { version = "0.4.5", optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
+criterion = "0.4"
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
 opt-level = "s"
+
+[[bench]]
+name = "benchmark"
+harness = false
