--- a/www/package.json
+++ b/www/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "create-wasm-app",
+  "name": "astar-wasm-demo",
   "version": "0.1.0",
-  "description": "create an app to consume rust-generated wasm packages",
   "main": "index.js",
   "bin": {
     "create-wasm-app": ".bin/create-wasm-app.js"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server"
+    "start": "webpack serve --config webpack.dev.js"
   },
   "dependencies": {
     "astar-wasm": "file:../pkg"
@@ -18,6 +17,11 @@
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
     "webpack-dev-server": "4.11.1",
-    "copy-webpack-plugin": "11.0.0"
+    "copy-webpack-plugin": "11.0.0",
+    "@types/node": "18.11.18",
+    "clean-webpack-plugin": "4.0.0",
+    "ts-loader": "9.4.2",
+    "typescript": "4.9.4",
+    "webpack-merge": "5.8.0"
   }
 }
