--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,10 +15,7 @@ permissions:
       
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
@@ -27,6 +24,30 @@ jobs:
 
       - name: Run tests
         run: cargo test --verbose
+        
+      - name: Pack
+        run: wasm-pack build --target web --verbose
+          
+      - name: Use Node 18
+        uses: actions/setup-node@v1
+        with:
+          node-version: 18.x
+
+      - name: Install dependencies
+        run: npm ci
+        working-directory: www/
+
+      - name: Build frontend
+        run: npm run build
+        working-directory: www/
+        
+      - name: Upload dist
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: |
+            www/dist
+
 
   deploy:
     runs-on: ubuntu-latest
@@ -40,6 +61,8 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
   
+  
+    # az storage blob upload-batch --account-name astarwasmdemo -d '$web' -s ./dist/ --overwrite 
     - name: 'blerp'
       run: |
           az account show
